Set log level to DEBUG

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
 include:
   - project: "renovate-bot/renovate-runner"
     file: "/templates/renovate.gitlab-ci.yml"
+
+variables:
+  LOG_LEVEL: debug
